fix(logConsulta): remove column logConsulta in database
