# src/controllers/user.js
@@ -19,38 +19,33 @@ class UserController {
     }
 
     create = asyncHandler(async(req, res) => {
-        /*
-
- test swagger
-        #swagger.tags = ['User']
-        #swagger.summary = 'Create a new user'
-        #swagger.description = 'This endpoint will create a new user'
-        #swagger.path = '/users/'
-        #swagger.method = 'post'
-        #swagger.produces = ['application/json']
-        #swagger.consumes = ['application/json']
-
-        #swagger.parameters['body'] = {
-            in: 'body',
-            description: 'User data.',
-            required: true,
-            schema: {
-                name: "user",
-                idade: 18,
-                cpf: "xxx-xxx-xxx-xx",
-                email: "user@example.com",
-                password: "1234",
-                tipoUser: "CLIENTE",
-                descricao: "appointments",
-                cep: "xxxxx-xxx",
-                numero: 10,
-                rua: "Rua XYZ",
-                cidade: "Cidade ABC",
-                telefone: "xx-xxxxx-xxxx",
-                senhaAlterada: "false",
-            }
+    /* #swagger.tags = ['User']
+    #swagger.summary = 'Create a new user'
+    #swagger.description = 'This endpoint will create a new user'
+    #swagger.path = '/users/'
+    #swagger.method = 'post'
+    #swagger.produces = ['application/json']
+    #swagger.consumes = ['application/json']
+    #swagger.parameters['body'] = {
+        in: 'body',
+        description: 'User data.',
+        required: true,
+        schema: {
+            name: "user",
+            idade: 18,
+            cpf: "xxx-xxx-xxx-xx",
+            email: "user@example.com",
+            password: "1234",
+            tipoUser: "CLIENTE",
+            descricao: "appointments",
+            cep: "xxxxx-xxx",
+            numero: 10,
+            rua: "Rua XYZ",
+            cidade: "Cidade ABC",
+            telefone: "xx-xxxxx-xxxx",
+            senhaAlterada: "false",
         }
-    */
+    } */
         const errors = validationResult(req);
         if (!errors.isEmpty()) {
             return res.status(400).json({ errors: errors.array() });
@@ -65,30 +60,25 @@ class UserController {
     });
 
     index = asyncHandler(async(req, res) => {
-
-        /*
-            #swagger.tags = ['User']
-            #swagger.summary = 'List all user'
-            #swagger.description = 'This endpoint will list all users'
-            #swagger.path = '/users/'
-            #swagger.method = 'get'
-*/
+        /* #swagger.tags = ['User']
+        #swagger.summary = 'List all user'
+        #swagger.description = 'This endpoint will list all users'
+        #swagger.path = '/users/'
+        #swagger.method = 'get' */
         const users = await UserService.findAll();
         res.json(users);
-        // #swagger.responses[200] = { description: 'List of users' }
-        // #swagger.responses[400] = { description: ''}
-        // #swagger.responses[404] = { description: ''}
-        // #swagger.responses[500] = { description: ''}
+    // #swagger.responses[200] = { description: 'List of users' }
+    // #swagger.responses[400] = { description: ''}
+    // #swagger.responses[404] = { description: ''}
+    // #swagger.responses[500] = { description: ''}
     });
 
     show = asyncHandler(async(req, res) => {
-        /*
-            #swagger.tags = ['User']
-            #swagger.summary = 'List a user'
-            #swagger.description = 'This endpoint will list a users'
-            #swagger.path = '/users/:id'
-            #swagger.method = 'get'
-*/
+    /* #swagger.tags = ['User']
+        #swagger.summary = 'List a user'
+        #swagger.description = 'This endpoint will list a users'
+        #swagger.path = '/users/:id'
+        #swagger.method = 'get' */
         const user = await UserService.findById(req.params.id);
         if (!user) {
             return res.status(404).json({ error: 'User não encontrado' });
@@ -101,12 +91,54 @@ class UserController {
     });
 
     update = asyncHandler(async(req, res) => {
+    /* #swagger.tags = ['User']
+    #swagger.summary = 'Update a user'
+    #swagger.description = 'This endpoint will update a user'
+    #swagger.path = '/users/'
+    #swagger.method = 'put'
+    #swagger.produces = ['application/json']
+    #swagger.consumes = ['application/json']
+    #swagger.parameters['body'] = {
+        in: 'body',
+        description: 'User data.',
+        required: true,
+        schema: {
+            name: "user",
+            idade: 18,
+            cpf: "xxx-xxx-xxx-xx",
+            email: "user@example.com",
+            password: "1234",
+            tipoUser: "CLIENTE",
+            descricao: "appointments",
+            cep: "xxxxx-xxx",
+            numero: 10,
+            rua: "Rua XYZ",
+            cidade: "Cidade ABC",
+            telefone: "xx-xxxxx-xxxx",
+            senhaAlterada: "false",
+        }
+    } */
         const userAtualizado = await UserService.update(req.params.id, req.body);
+        // #swagger.responses[200] = { description: 'Update of user' }
+        // #swagger.responses[400] = { description: ''}
+        // #swagger.responses[404] = { description: ''}
+        // #swagger.responses[500] = { description: ''}
         res.json(userAtualizado);
     });
 
     delete = asyncHandler(async(req, res) => {
+    /* #swagger.tags = ['User']
+    #swagger.summary = 'Delete a user'
+    #swagger.description = 'This endpoint will delete a user'
+    #swagger.path = '/users/'
+    #swagger.method = 'put'
+    #swagger.produces = ['application/json']
+    #swagger.consumes = ['application/json'] */
         await UserService.delete(req.params.id);
+        // #swagger.responses[200] = { description: 'Delete of user' }
+        // #swagger.responses[400] = { description: ''}
+        // #swagger.responses[404] = { description: ''}
+        // #swagger.responses[500] = { description: ''}
         res.status(204).send();
     });
 }
